<resources>
    <string name="app_name">MiCalculadoraApp</string>

    <string name="btn_cero">0</string>
    <string name="btn_uno">1</string>
    <string name="btn_dos">2</string>
    <string name="btn_tres">3</string>
    <string name="btn_cuatro">4</string>
    <string name="btn_cinco">5</string>
    <string name="btn_seis">6</string>
    <string name="btn_siete">7</string>
    <string name="btn_ocho">8</string>
    <string name="btn_nueve">9</string>
    <string name="btn_punto">.</string>
    <string name="btn_suma">+</string>
    <string name="btn_resta">-</string>
    <string name="btn_multiplicacion">*</string>
    <string name="btn_division">/</string>
    <string name="btn_borrar">Borrar</string>
    <string name="btn_calcular">Calcular</string>
</resources>